Archive2/3d/7c85d881c56118/output
main.cpp:16:13: error: need 'typename' before 'Iterator::different_type' because 'Iterator' is a dependent scope
     typedef Iterator::different_type    difference_type;
             ^
main.cpp:17:13: error: need 'typename' before 'Iterator::value_type' because 'Iterator' is a dependent scope
     typedef Iterator::value_type        value_type;
             ^
main.cpp:18:13: error: need 'typename' before 'Iterator::pointer' because 'Iterator' is a dependent scope
     typedef Iterator::pointer           pointer;
             ^
main.cpp:19:13: error: need 'typename' before 'Iterator::reference' because 'Iterator' is a dependent scope
     typedef Iterator::reference         reference;
             ^
main.cpp:20:13: error: need 'typename' before 'Iterator::iterator_category' because 'Iterator' is a dependent scope
     typedef Iterator::iterator_category iterator_category;
             ^
main.cpp:28:13: error: 'value_type' does not name a type
     typedef value_type        T;
             ^
main.cpp:29:13: error: 'pointer' does not name a type
     typedef pointer           T*;
             ^
main.cpp:30:13: error: 'reference' does not name a type
     typedef reference         T&;
             ^
main.cpp:31:13: error: 'iterator_category' does not name a type
     typedef iterator_category random_access_iterator_tag;
             ^
